<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.alfonsohernandez.boardgamebestfriends.presentation.login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        app:titleTextColor="@color/darkGrey"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginLLall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/bgbf_icon_small" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginBfacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="2dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginBgmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/black"/>


        <TextView
            android:id="@+id/loginOr"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/loginOr"
            android:textAlignment="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/black"/>

     </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <EditText
        android:id="@+id/loginETemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/loginMailHint"
        android:maxLength="40"/>

    <EditText
        android:id="@+id/loginETpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/loginPasswordHint"
        android:maxLength="15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <Button
        android:id="@+id/loginBmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonLogIn"
        android:background="@color/darkGrey"
        android:textColor="@color/cardview_light_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <TextView
        android:id="@+id/loginTVsignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginSignIn"
        android:textAlignment="center"
        android:textColor="@color/darkGrey"
        android:textStyle="bold" />

    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>
